# FYP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tinyfiledialogs.c
include/: App.h  Canvas.h  Curve.h  Point.h  VisualPoint.h  internal_string.h  outerclass.h
source/: App.cpp  Canvas.cpp  Curve.cpp  Point.cpp
test/: CMakeLists.txt  flowers.txt  integration_tests.cpp  main.cpp  main_approval_test.cpp  unit_tests.cpp
test/approval_tests/: integration_tests.Curve_Formation.approved.txt
test/util/: catch.h
